# python_taskling

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
taskling/: Database.py  Task.py  __main__.py
taskling/cli/: __main__.py
tests/: test_cli.py  test_database.py  test_dataclass.py
