[metadata]
author = Alexander Borgardt
author_email = aborgardt.public@gmail.com
classifiers =
    Development Status :: 0
    License :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
description = A todo list written in python 3 inspired by klaussinani/taskbook.
license = MIT License
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.0.0
keywords = taskling,json,todo,list
name = taskling
url = https://github.com/b1tray3r/taskling

[options]
python_requires = >=3
install_requires =
    pysondb-v2
    click

packages = find:

zip_safe = False

[options.entry_points]
console_scripts =
    taskling=taskling.cli:main
